tests/rustdoc-ui/scrape-examples/scrape-examples-wrong-options-1.rs
//@ compile-flags: -Z unstable-options --scrape-examples-target-crate foobar

//~? ERROR must use --scrape-examples-output-path and --scrape-examples-target-crate together
